<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_fav"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_favorite"/>

    <include
        android:id="@+id/include_loading"
        android:visibility="gone"
        layout="@layout/ic_loading_screen"/>

</FrameLayout>