...
    android:layout_height="match_parent"
    android:background="@drawable/bottom_rounded"
    android:backgroundTint="@color/myDarkPurple"
    >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_film"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_movie"/>

    <include
        android:id="@+id/include_loading"
...
